# Artisan

./: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/artisan3d/: __init__.py  animation.py  artisan.py  cli.py  file_io.py  modeling.py  plugin_manager.py  rendering.py  texturing.py
tests/: __init__.py  test_artisan3d.py
