[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "artisan"
version = "0.1.0"
description = "3D Artisan is a 3D modeling application that allows users to create, edit, and manage 3D models and scenes. The application is built using Python and provides an intuitive and user-friendly interface for users to interact with 3D models and scenes."
readme = "README.md"
authors = [
  {name = "Yusuf Adel", email = "yusufadell.dev@gmail.com"}
]
maintainers = [
  {name = "Yusuf Adel", email = "yusufadell.dev@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/imperiumx/artisan/issues"
changelog = "https://github.com/imperiumx/artisan/blob/master/changelog.md"
homepage = "https://github.com/imperiumx/artisan"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
